# Feliks

./: .gitignore  README.md  SUEDO.md
feliks/: .gitignore  Cargo.toml
feliks-aura/: Cargo.toml
feliks-aura/src/: main.rs
feliks-neo/: Cargo.toml
feliks-neo/src/: main.rs
feliks/src/: customTypes.rs  custom_types.rs  human.rs  human_manager.rs  main.rs  neo.rs  schedule.rs  sim_engine.rs  train.rs  train_manager.rs
