[package]
name = "feliks-aura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bolt-client = "0.10.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full"] }
tokio-stream = "0.1.8"
serde = { version = "1.0.130", features = ["derive"] }