[package]
name = "feliks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
neo4rs = "0.5.8"
futures = "0.3.18"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8.4"